src/objects/MICO_App__c.object
<CustomObject>
    <description>Business Description: This object is used to store a list of applications, capturing their name, use, technical and business contacts as well as physical location.
Used In: Mission Control App

Created on 04/29/2014 by SMills
MICO</description>
    <fields>
        <fullName>App_Code__c</fullName>
        <description>The 4 letter application code used to namespace this application
Created on 04/29/2014 by SMills
MICO</description>
        <externalId>true</externalId>
        <inlineHelpText>The 4 letter application code used to namespace this application</inlineHelpText>
        <label>App Code</label>
        <length>4</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Business_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The first point of contact about this application from a business perspective
Created on 04/29/2014 by SMills 
MICO</description>
        <inlineHelpText>The first point of contact about this application from a business perspective</inlineHelpText>
        <label>Business Contact</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MICO_Apps2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Criticality__c</fullName>
        <description>This field is used to store the business criticality of the application: Created on 05/08/2014 by Preeti Grover:MICO</description>
        <label>Business Criticality</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Detailed_Description__c</fullName>
        <description>A detailed description of the application
Created on 04/29/2014 by SMills 
MICO</description>
        <label>Detailed Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Org__c</fullName>
        <description>The org this application is being delivered in
Created on 04/29/2014 by SMills 
MICO</description>
        <inlineHelpText>In what org is this app being delivered?</inlineHelpText>
        <label>Org</label>
        <picklist>
            <picklistValues>
                <fullName>Production: GSO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Production: Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sandbox: GSO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sandbox: Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Risk_Assessment_Notes__c</fullName>
        <description>This field is used to capture risk assessment notes: Created on 05/08/2014 by Preeti Grover:MICO</description>
        <label>Risk Assessment Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Risk_Category__c</fullName>
        <description>This field is used to capture the risk category associated with the application: Created on 05/8/2014 by Preeti Grover:MICO</description>
        <label>Risk Category</label>
        <picklist>
            <picklistValues>
                <fullName>External</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Schedule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operational</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Stage in application development lifecycle
Created on 04/29/2014 by SMills 
MICO</description>
        <inlineHelpText>What stage is this application in it&apos;s lifecycle. Note that applications can be in Long Term Support and still receiving significant enhancements.</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Initial Idea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Funding Allocated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Timeline Planned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Build</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Stabilisation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Long Term Support</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <description>High level summary of the app, including users, key functionality etc.
Created on 04/29/2014 by SMills 
MICO</description>
        <inlineHelpText>High level summary of the app, including users, key functionality etc.</inlineHelpText>
        <label>Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Technical_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The first point of contact about this application from a technical perspective
Created on 04/29/2014 by SMills 
MICO</description>
        <inlineHelpText>The first point of contact about this application from a technical perspective</inlineHelpText>
        <label>Technical Contact</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MICO_Apps</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>App</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>App Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Apps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>